--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,7 @@
 html {
-  font-family: sans-serif;
+
+  font-family: 'Overlock', cursive;
+  font-family: 'Aclonica', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
