--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -10,6 +10,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+*, *::after, *::before {
+  box-sizing: border-box;
+}
 article,
 aside,
 details,
