--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -70,8 +70,8 @@ h1 {
   margin: 0.67em 0;
 }
 mark {
-  background-color: #ff0;
-  color: #000;
+  background-color: #688F4E;
+  color: #FFFFFF;
 }
 small {
   font-size: 80%;
@@ -595,7 +595,7 @@ td:last-child {
 }
 tt,
 code {
-  background-color: hsla(0, 0%, 0%, 0.04);
+  background-color: #FFFFFF;
   border-radius: 3px;
   font-family: "SFMono-Regular", Consolas, "Roboto Mono", "Droid Sans Mono",
     "Liberation Mono", Menlo, Courier, monospace;
